# zenith

./: .gitignore  SistemaDescongelamento.py  analise.py  main.py  metricas.py  pyproject.toml  requirements.txt  zenith.csv
caio/: app.py  createDB.py  estoque.db  produtos_nao_cadastrados.csv  scriptsDB.py  twodays.py
edgard/: calculos.py  main.py
enos/: createDB.py  scriptsDB.py
enos/data/: estoque.db
enos/repositories/: VendaRepository.py
frontend/: index.html  package-lock.json  script.js  style.css
frontend/src/: App.tsx  index.css
new_model/: Predicao.py  createDB.py  estoque.db
src/: Manager.py  app.py  database.py  manager.py  previsao.py  twodays.py
src/data/: dados_zenith.csv  data.db
src/models/: SistemaDescongelamento.py
src/repositories/: LoteRepository.py  PrevisaoRepository.py  ProdutoRepository.py  VendaRepository.py
static/: script.js
template/: index.html
templates/: index.html  predict.html  upload.html
templates/pages/: index.html  script.js  style.css
