[project]
name = "zenith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "prophet>=1.1.7",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "werkzeug>=3.1.3",
]
