[project]
name = "zenith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flasgger>=0.9.7.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "prophet>=1.1.7",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
